apps/default/heimdall/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: default
  labels:
    app: heimdall
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      containers:
      - name: heimdall
        image: linuxserver/heimdall:2.2.2-ls119
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config
          mountPath: /config
        resources:
          requests:
            memory: "50Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "100m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nfs-pvc-heimdall
