apps/default/heimdall/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: heimdall
